tests/baselines/reference/unusedTypeParameterInMethod5.errors.txt
tests/cases/compiler/unusedTypeParameterInMethod5.ts(2,25): error TS6133: 'X' is declared but its value is never read.


==== tests/cases/compiler/unusedTypeParameterInMethod5.ts (1 errors) ====
    class A {
        public f1 = function<X>() {
                            ~~~
!!! error TS6133: 'X' is declared but its value is never read.
    
        }
    }